updated POM for test memory errors