@@ -46,8 +46,18 @@
 	</modules>
 
 	<properties>
-		<openMRSVersion>1.8.0</openMRSVersion>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <reportingVersion>0.7.0</reportingVersion>
+        <serializationVersion>0.2.7</serializationVersion>
+        <htmlWidgetsVersion>1.6.0</htmlWidgetsVersion>
+        <logicVersion>0.5.1</logicVersion>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <MODULE_ID>${project.parent.artifactId}</MODULE_ID>
+        <MODULE_NAME>${project.parent.name}</MODULE_NAME>
+        <MODULE_VERSION>${project.parent.version}</MODULE_VERSION>
+        <MODULE_PACKAGE>${project.parent.groupId}.${project.parent.artifactId}</MODULE_PACKAGE>
+        <openMRSVersion>1.8.0</openMRSVersion>
+        <customArgLineForTesting></customArgLineForTesting>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencyManagement>
@@ -57,14 +67,14 @@
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>reporting</artifactId>
-				<version>0.7.0</version>
+				<version>${reportingVersion}</version>
 				<scope>provided</scope>
 			</dependency>
 
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>logic-api</artifactId>
-				<version>0.5.1</version>
+				<version>${logicVersion}</version>
 				<type>jar</type>
 				<scope>provided</scope>
 			</dependency>
@@ -72,14 +82,14 @@
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>serialization.xstream-api</artifactId>
-				<version>0.2.7</version>
+				<version>${serializationVersion}</version>
 				<scope>provided</scope>
 			</dependency>
 
 			<dependency>
 				<groupId>org.openmrs.module</groupId>
 				<artifactId>htmlwidgets</artifactId>
-				<version>1.6.0</version>
+				<version>${htmlWidgetsVersion}</version>
 				<scope>provided</scope>
 			</dependency>
 			
@@ -141,18 +151,56 @@
 						<source>1.6</source>
 					</configuration>
 				</plugin>
-				<plugin>
-					<groupId>org.openmrs.maven.plugins</groupId>
-					<artifactId>maven-openmrs-plugin</artifactId>
-					<version>1.0.1</version>
-				</plugin>
 
-				<plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>2.3.2</version>
+                    <configuration>
+                        <autoVersionSubmodules>true</autoVersionSubmodules>
+                        <tagNameFormat>@{project.version}</tagNameFormat>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.openmrs.maven.plugins</groupId>
+                    <artifactId>maven-openmrs-plugin</artifactId>
+                    <version>1.0.1</version>
+                    <extensions>true</extensions>
+                    <executions>
+                        <execution>
+                            <id>init</id>
+                            <phase>initialize</phase>
+                            <goals>
+                                <goal>initialize-module</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>pack</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>package-module</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+
+                <plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-dependency-plugin</artifactId>
 					<version>2.4</version>
 				</plugin>
-			</plugins>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.5</version>
+                    <configuration>
+                        <argLine>-Duser.language=en -Duser.region=US -Xmx512m -XX:MaxPermSize=512m ${customArgLineForTesting}</argLine>
+                    </configuration>
+                </plugin>
+
+            </plugins>
 		</pluginManagement>
 	</build>
 
